# Plasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp
cmake/: FindSolidity.cmake
modules/: CMakeLists.txt
modules/base/include/: base.hpp  cli.hpp  logger.hpp  report.hpp  singleton.hpp
modules/base/src/: cli.cpp  logger.cpp
modules/core/include/: cpn.hpp  cpnidegenerator.hpp  cpnxml.hpp  generator.hpp  noopgenerator.hpp  randomizer.hpp  simulator.hpp  visualizer.hpp
modules/core/src/: cpn.cpp  cpn_network.dot  cpnidegenerator.cpp  cpnxml.cpp  generator.cpp  noopgenerator.cpp  randomizer.cpp  simulator.cpp  visualizer.cpp
modules/netgen/include/: generator.hpp
modules/parse/include/: parse.hpp
modules/parse/src/: parse.cpp
tests/: BecToken.sol  CMakeLists.txt  EtherLotto.sol  Government.sol  MyToken.sol  SimpleDAO.sol  SmartBillions.sol  array.sol  baseline.sol  binaryoperation.sol  cpnxml_test.cpp  erc20.sol  ifstatement.sol  mapping.sol  simplelp.sol  test.sol  transfer.sol  variabledeclaration.sol  whilestatement.sol
tests/access_control/: FibonacciBalance.sol  arbitrary_location_write_simple.sol  incorrect_constructor_name1.sol  incorrect_constructor_name2.sol  incorrect_constructor_name3.sol  mapping_write.sol  multiowned_vulnerable.sol  mycontract.sol  parity_wallet_bug_2.sol  phishable.sol  proxy.sol  rubixi.sol  simple_suicide.sol  unprotected0.sol  wallet_02_refund_nosub.sol  wallet_03_wrong_constructor.sol  wallet_04_confused_sign.sol
tests/arithmetic/: insecure_transfer.sol  integer_overflow_1.sol  integer_overflow_add.sol  integer_overflow_benign_1.sol  integer_overflow_mapping_sym_1.sol  integer_overflow_minimal.sol  integer_overflow_mul.sol  integer_overflow_multitx_multifunc_feasible.sol  integer_overflow_multitx_onefunc_feasible.sol  overflow_single_tx.sol  timelock.sol  token.sol  tokensalechallenge.sol
tests/bad_randomness/: blackjack.sol  etheraffle.sol  guess_the_random_number.sol  lottery.sol  lucky_doubler.sol  old_blockhash.sol  random_number_generator.sol
tests/denial_of_service/: auction.sol  dos_address.sol  dos_number.sol  dos_simple.sol
tests/front_running/: FindThisHash.sol  assignment.sol  eth_tx_order_dep_with_transfer.sol  eth_tx_order_dependence_minimal.sol  frontrun.sol  functioncall.sol  odds_and_evens.sol  payment.sol  require.sol  revert.sol  reward.sol  storage.sol  test.sol  vote.sol  whilestatement.sol
tests/other/: crypto_roulette.sol  name_registrar.sol  open_address_lottery.sol
tests/reentrancy/: etherbank.sol  etherstore.sol  modifier_reentrancy.sol  reentrance.sol  reentrancy_bonus.sol  reentrancy_cross_function.sol  reentrancy_dao.sol  reentrancy_insecure.sol  reentrancy_simple.sol  spank_chain_payment.sol
tests/short_addresses/: short_address_example.sol
tests/time_manipulation/: governmental_survey.sol  lottopollo.sol  roulette.sol  timed_crowdsale.sol
tests/unchecked_low_level_calls/: etherpot_lotto.sol  king_of_the_ether_throne.sol  lotto.sol  mishandled.sol
